--- a/src/schema/rules/sidecars/pet.yaml
+++ b/src/schema/rules/sidecars/pet.yaml
@@ -306,3 +306,36 @@ PETTask:
     TaskDescription: recommended
     CogAtlasID: recommended
     CogPOID: recommended
+
+PETDerivativesMotionCorrection:
+  selectors:
+    - dataset.dataset_description.DatasetType == "derivative"
+    - 'intersects([modality], ["pet"])'
+    - suffix == "motion"
+  fields:
+    Description:
+      level: required
+    Sources:
+      level: optional
+    TargetImage:
+      level: optional
+    TargetImageDescription:
+      level: optional
+    SpatialInterpolation:
+      level: optional
+    ImageSimilarityMetric:
+      level: optional
+    CommandLine:
+      level: optional
+
+PETDerivativesSmoothing:
+  selectors:
+    - dataset.dataset_description.DatasetType == "derivative"
+    - 'intersects([modality], ["pet"])'
+    - suffix == "pet"
+  fields:
+    FullWidthHalfMaximum:
+      level: required
+      level_addendum: if `TargetImageDescription` contains `"FWHM"`
+      description_addendum: |
+        FWHM of spatial filter, applied to the data
