--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,11 @@ bidsschematools = { path = "tools/schemacode", editable = true }
 
 [dependency-groups]
 doc = [
+  "bidsschematools[expressions]",
   "sphinx>=7.2.2",
   "furo",
   "myst_parser",
-  "bidsschematools[expressions]",
+  "myst-nb",
+  "universal_pathlib",
+  "fsspec[http]",
 ]
