--- a/src/schema/objects/enums.yaml
+++ b/src/schema/objects/enums.yaml
@@ -75,8 +75,45 @@ _TransformSpace:
     - $ref: objects.enums.individual.value
     - $ref: objects.enums.study.value
     - $ref: objects.enums.scanner.value
+    - $ref: objects.enums.ICBM452AirSpace.value
+    - $ref: objects.enums.ICBM452Warp5Space.value
+    - $ref: objects.enums.IXI549Space.value
     - $ref: objects.enums.fsaverage.value
+    - $ref: objects.enums.fsaverageSym.value
+    - $ref: objects.enums.fsLR.value
+    - $ref: objects.enums.MNIColin27.value
     - $ref: objects.enums.MNI152Lin.value
+    - $ref: objects.enums.MNI152NLin2009aSym.value
+    - $ref: objects.enums.MNI152NLin2009bSym.value
+    - $ref: objects.enums.MNI152NLin2009cSym.value
+    - $ref: objects.enums.MNI152NLin2009aAsym.value
+    - $ref: objects.enums.MNI152NLin2009bAsym.value
+    - $ref: objects.enums.MNI152NLin2009cAsym.value
+    - $ref: objects.enums.MNI152NLin6Sym.value
+    - $ref: objects.enums.MNI152NLin6ASym.value
+    - $ref: objects.enums.MNI305.value
+    - $ref: objects.enums.NIHPD.value
+    - $ref: objects.enums.OASIS30AntsOASISAnts.value
+    - $ref: objects.enums.OASIS30Atropos.value
+    - $ref: objects.enums.Talairach.value
+    - $ref: objects.enums.UNCInfant.value
+    - $ref: objects.enums.fsaverage3.value
+    - $ref: objects.enums.fsaverage4.value
+    - $ref: objects.enums.fsaverage5.value
+    - $ref: objects.enums.fsaverage6.value
+    - $ref: objects.enums.fsaveragesym.value
+    - $ref: objects.enums.UNCInfant0V21.value
+    - $ref: objects.enums.UNCInfant1V21.value
+    - $ref: objects.enums.UNCInfant2V21.value
+    - $ref: objects.enums.UNCInfant0V22.value
+    - $ref: objects.enums.UNCInfant1V22.value
+    - $ref: objects.enums.UNCInfant2V22.value
+    - $ref: objects.enums.UNCInfant0V23.value
+    - $ref: objects.enums.UNCInfant1V23.value
+    - $ref: objects.enums.UNCInfant2V23.value
+    - $ref: objects.enums.Pixels.value
+    - $ref: objects.enums.ACPC.value
+    - $ref: objects.enums.ScanRAS.value
 _iEEGCoordSys:
   type: string
   enum:
