FIX: update schema

--- a/src/schema/rules/entities.yaml
+++ b/src/schema/rules/entities.yaml
@@ -3,6 +3,9 @@
 # Entity definitions appear in the `objects/entities.yaml` file.
 - subject
 - session
+- to
+- from
+- mode
 - sample
 - task
 - tracksys
