--- a/src/schema/rules/files/deriv/imaging.yaml
+++ b/src/schema/rules/files/deriv/imaging.yaml
@@ -297,14 +297,16 @@ pet_petref:
 spatial_transform_image:
   selectors:
     - dataset.dataset_description.DatasetType == 'derivative'
+  $ref: rules.files.raw.pet.pet
   suffixes:
     - xfm
   extensions:
     - .txt
     - .json
   entities:
-    subject: required
-    session: optional
+    $ref: rules.files.raw.pet.pet.entities
+    space: optional
+    description: optional
     from: required
     to: required
     mode: required
