--- a/src/schema/rules/files/raw/task.yaml
+++ b/src/schema/rules/files/raw/task.yaml
@@ -60,6 +60,18 @@ timeseries__mri_no_task:
 # Specializations
 # In these rules, we use $ref to retrieve most of an object, and then override
 
+events__microephys:
+  $ref: rules.files.raw.task.events
+  datatypes:
+    - ecephys
+    - icephys
+  entities:
+    subject: required
+    session: optional
+    task: optional
+    acquisition: optional
+    run: optional
+
 events__mri:
   $ref: rules.files.raw.task.events
   datatypes:
