--- a/src/schema/rules/tabular_data/modality_agnostic.yaml
+++ b/src/schema/rules/tabular_data/modality_agnostic.yaml
@@ -46,12 +46,12 @@ Phenotypes:
         A chronological `run` number is used when
         a measurement tool or assessment described by a tabular file
         was repeated within a session.
-    acq_time:
+    acq_time__scans:
       level: optional
       description_addendum: |
         If acquisition time is available, the `acq_time` column CAN be used
         to record the time of acquisition of each row in the tabular file.
-  index_columns: [participant_id, session_id, run, acq_time]
+  index_columns: [participant_id, session_id, run, acq_time__scans]
   additional_columns: allowed
 
 Samples:
