Updates for BEP036
- Updating run to run_id in phenotype appendix
- Updating the table to a MACRO inthe phenotype agnostic files section
- Updating run to run_id in columns.yaml
- Updating run to run_id in modality_agnostic.yaml

--- a/src/schema/rules/tabular_data/modality_agnostic.yaml
+++ b/src/schema/rules/tabular_data/modality_agnostic.yaml
@@ -39,7 +39,7 @@ Phenotypes:
         as soon as multiple sessions are present in the data set
         regardless of whether those sessions are in the
         `phenotype/` data, `sub-<label>/` data, or a combination of the two.
-    run:
+    run_id:
       level: optional
       description_addendum: |
         REQUIRED if there are multiple runs within any session.
@@ -51,7 +51,7 @@ Phenotypes:
       description_addendum: |
         If acquisition time is available, the `acq_time` column CAN be used
         to record the time of acquisition of each row in the tabular file.
-  index_columns: [participant_id, session_id, run, acq_time__scans]
+  index_columns: [participant_id, session_id, run_id, acq_time__scans]
   additional_columns: allowed
 
 Samples:
