--- a/src/schema/objects/columns.yaml
+++ b/src/schema/objects/columns.yaml
@@ -429,13 +429,13 @@ response_time:
     `n/a` denotes a missed response.
   type: number
   unit: s
-run:
-  name: run
-  display_name: Run
+run_id:
+  name: run_id
+  display_name: Run ID
   description: |
-    A run index that corresponds to an existing `run-<index>` entity used in in a filename(s).
+    A run identifier that corresponds to an existing `run-<index>` entity used in a filename(s).
   type: string
-  format: index
+  pattern: ^run-[0-9]+$
 sample_id:
   name: sample_id
   display_name: Sample ID
