--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -1728,6 +1728,16 @@ JNTANGChannelCount:
     Number of joint angle channels.
   type: integer
   minimum: 0
+Keywords:
+  name: Keywords
+  display_name: Keywords
+  description: |
+    List of three to six keywords that describe the content or subject matter of the dataset.
+    These are useful for enhancing the findability of the dataset through Search Engine
+    Optimization (SEO).
+  type: array
+  items:
+    type: string
 LabelingDistance:
   name: LabelingDistance
   display_name: Labeling Distance
